# surface-normal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.cpp  surface_normal.cpp  surface_normal.h  tool.cpp  tool.h
include/: surface_normal.h  surface_normal.hpp
include/surface_normal/: base.hpp  cuda_compatibility.hpp  image_view.hpp  numpy.hpp  opencv2.hpp
src/: python.cpp  surface_normal.cpp  surface_normal.cu  surface_normal_impl.hpp  svd3_cuda.hpp  test.cpp
